--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,4 +1,8 @@
 .footer-bar {
+  background-color: rgb(199, 199, 199);
   bottom: 0;
+  display: flex;
+  justify-content: space-between;
   position: fixed;
+  width: 100%;
 }
