--- a/src/Header.css
+++ b/src/Header.css
@@ -1,4 +1,22 @@
-.header-css {
+.header-content {
+  align-items: center;
+  background-color: rgb(199, 199, 199);
+  display: flex;
+  height: 45px;
+  justify-content: space-between;
   position: fixed;
   top: 0;
+  width: 100%;
+}
+
+.profileTitle {
+  display: flex;
+  width: 60%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.img-icons {
+  width: 40px;
+  height: 40px;
 }
