--- a/src/Header.css
+++ b/src/Header.css
@@ -1,4 +1,4 @@
-.header-content {
+/* .header-content {
   align-items: center;
   background-color: rgb(199, 199, 199);
   display: flex;
@@ -20,3 +20,4 @@
   height: 40px;
   width: 40px;
 }
+ */
