--- a/src/DetailsPage.css
+++ b/src/DetailsPage.css
@@ -1,9 +1,61 @@
-body {
-  margin: 20px
+.details-container {
+  margin: 20px 20px 70px;
 }
+
 .img-recipe {
-  width: 80vw;
-  margin: 10px 10px 20px 28px;
+  width: 100vw;
+}
+
+.title-recipe {
+  text-align: center;
+  font-size: 40px;
+  margin-right: 60px;
+}
+
+.subtitles-recipe {
+  font-size: 26px;
+}
+
+.category {
+  font-size: 22px;
+  margin-left: 7px;
+}
+
+.header-details-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.icon-btn {
+  padding: 5px;
+  margin-right: 5px;
+}
+
+.ingredients-list {
+  margin-left: 25px;
+}
+
+.instructions-text {
+  margin-left: 10px;
+  text-align: justify;
+  margin-bottom: 20px;
+}
+
+.img-recipe-details {
+  width: 258px;
+}
+
+.recommended-category-text {
+  text-align: center;
+  font-size: 18px;
+  font-style: italic;
+  margin: 10px auto 5px;
+}
+
+.recommended-text {
+  text-align: center;
+  font-size: 20px;
 }
 
 .button-recipe {
