--- a/src/Login.css
+++ b/src/Login.css
@@ -32,7 +32,7 @@
 .login-form-container {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 100%;
   margin: auto;
 }
 
@@ -41,7 +41,7 @@ input {
 }
 
 .login-input-form {
-  margin: 10px auto 20px;
+  margin: 8px auto;
   background-color: rgb(255, 255, 255);
   border: 1px solid rgb(214, 217, 220);
   border-radius: 8px;
@@ -62,6 +62,7 @@ input {
   border: none;
   border-radius: 8px;
   padding: 10px;
+  margin-top: 25px;
 }
 
 .login-btn-entrar:hover {
