--- a/src/DetailsPage.css
+++ b/src/DetailsPage.css
@@ -65,16 +65,16 @@
 }
 
 .button-recipe {
+  position: fixed;
+  bottom: 0;
   font-size: 16px;
   font-weight: bold;
-
   color: #FFFFFF;
   background-color: #6cbe29de;
-
   border: none;
   border-radius: 8px;
-
   padding: 10px;
+  margin-bottom: 10px;
 }
 
 .button-recipe:hover {
@@ -92,5 +92,5 @@
 .recommended-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
