--- a/src/Login.css
+++ b/src/Login.css
@@ -1,39 +1,38 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 .login-container {
-  background: url("./images/fundo-de-culinaria.jpg");
-  opacity: 0.7;
-  position: absolute;
-  z-index: -1;
-  display: flex;
-  flex-direction: column;
-  /* background-color: rgb(174, 218, 175); */
+  background: url('./images/fundo-de-culinaria.jpg');
   border: 1px solid rgb(214, 217, 220);
   border-radius: 10px;
   box-shadow: 7px 5px 5px darkgrey;
-  width: 80vw;
+  display: flex;
+  flex-direction: column;
   height: 70vh;
-  padding: 50px;
   margin: 20% 30px;
+  opacity: 0.7;
+  padding: 50px;
+  position: absolute;
+  width: 80vw;
+  z-index: -1;
 }
 
 .title-header {
-  color: rgb(0, 0, 0);
-  text-align: center;
-  margin: 10px auto 30px;
+  color: black;
   font-size: 50px;
-  font-weight: bold;
+  font-weight: 300;
+  margin: 10px auto 30px;
+  text-align: center;
 }
 
 .login-form-container {
   display: flex;
   flex-direction: column;
-  width: 100%;
   margin: auto;
+  width: 100%;
 }
 
 input {
@@ -41,13 +40,13 @@ input {
 }
 
 .login-input-form {
-  margin: 8px auto;
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   border: 1px solid rgb(214, 217, 220);
   border-radius: 8px;
-  width: 100%;
-  padding: 7px;
   font-size: 14px;
+  margin: 8px auto;
+  padding: 7px;
+  width: 100%;
 }
 
 .login-input-form:hover {
@@ -55,14 +54,13 @@ input {
 }
 
 .login-btn-entrar {
-  font-size: 16px;
-  font-weight: bold;
-  color: #FFFFFF;
   background-color: #6cbe29c4;
   border: none;
   border-radius: 8px;
-  padding: 10px;
+  color: white;
+  font-size: 16px;
   margin-top: 25px;
+  padding: 10px;
 }
 
 .login-btn-entrar:hover {
