--- a/src/Header.css
+++ b/src/Header.css
@@ -2,8 +2,9 @@
   align-items: center;
   background-color: rgb(199, 199, 199);
   display: flex;
-  height: 45px;
+  height: 50px;
   justify-content: space-between;
+  padding-top: 8px;
   position: fixed;
   top: 0;
   width: 100%;
