css tela de detalhes

--- a/src/Profile.css
+++ b/src/Profile.css
@@ -1,5 +1,5 @@
 .profile-container {
-  background-color: #C5995A;
+  background-color: #c99d5f;
   display: flex;
   flex-direction: column;
   justify-content: center;
