--- a/src/DetailsPage.css
+++ b/src/DetailsPage.css
@@ -1,9 +1,19 @@
-.details-container {
-  margin: 20px 20px 70px;
+.details-page-default{
+  color: #141414;
 }
 
 .img-recipe {
   width: 100vw;
+}
+
+.header-details-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 15px 5px 0;
+}
+
+.details-recipe-container {
+  margin: 0 12px 70px;
 }
 
 .title-recipe {
@@ -24,27 +34,35 @@
 
 .category {
   font-size: 22px;
-  margin-left: 7px;
-}
-
-.header-details-container {
-  align-items: center;
-  display: flex;
-  justify-content: flex-end;
+  font-style: italic;
 }
 
 .icon-btn {
+  background-color: #98A93E;
   margin-right: 5px;
   padding: 5px;
 }
 
-.ingredients-list {
-  margin-left: 25px;
+.icon-btn:hover {
+  background-color: rgb(163, 182, 71);
 }
 
-.instructions-text {
-  margin-bottom: 20px;
+li {
+  list-style-type: none;
   margin-left: 10px;
+}
+
+.ingredients-list {
+  background-color: #C5995A;
+  padding: 5px;
+}
+
+.instructions-container {
+  background-color: #C5995A;
+}
+.instructions-text {
+  margin: 0 10px 20px;
+  padding: 5px;
   text-align: justify;
 }
 
@@ -53,11 +71,11 @@
 }
 
 .button-recipe {
-  background-color: #6cbe29de;
-  border: none;
+  background-color:#98A93E;
+  border: 1px solid #69443B;
   border-radius: 8px;
   bottom: 0;
-  color: white;
+  color: #141414;
   font-size: 16px;
   font-weight: 300;
   margin-bottom: 10px;
@@ -66,11 +84,7 @@
 }
 
 .button-recipe:hover {
-  background-color: #a5e670fa;
-}
-
-.button-recipe:active {
-  background-color: #76d627ab;
+  background-color: rgb(163, 182, 71);
 }
 
 .icon-button {
