--- a/src/ExploreFoods.css
+++ b/src/ExploreFoods.css
@@ -1,12 +1,29 @@
+.explore-foods {
+  display: flex;
+  justify-content: center;
+}
+
 .contentExplore {
   display: flex;
-  justify-content: space-around;
-  margin-top: 40vh;
+  flex-direction: column;
+  height: 590px;
+  justify-content: center;
+  margin: none;
+  width: 70%;
 }
 
 .buttonsExplore {
   background-color: rgb(203, 211, 194);
   border: 1px solid rgb(155, 155, 155);
   border-radius: 7px;
+  margin: 20px;
   padding: 10px;
+}
+
+.buttonsExplore:hover {
+  background-color: #6d123f;
+}
+
+.buttonsExplore:active {
+  background-color: rgb(199, 199, 199);
 }
