mudança nos icones

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -10,12 +10,12 @@
 }
 
 .button-background {
-  background-color: #6d123f;
+  background-color: #96496d;
   border: none;
   border-radius: 21px;
   height: 42px;
   margin: 8px;
-  opacity: 0.8;
+  opacity: 0.6;
   padding: none;
   width: 42px;
 }
