--- a/src/Header.css
+++ b/src/Header.css
@@ -35,10 +35,10 @@
 }
 
 .img-icons {
-  background-color: #6d123f;
+  background-color: #96496d;
   border-radius: 22.5px;
   height: 42px;
-  opacity: 0.7;
+  opacity: 0.6;
   padding: 7px;
   width: 42px;
 }
