--- a/src/Login.css
+++ b/src/Login.css
@@ -5,7 +5,7 @@
 }
 
 .login-container {
-  background: url("./images/fundo-de-culinaria.jpg");
+  background: url('./images/fundo-de-culinaria.jpg');
   border: 1px solid rgb(214, 217, 220);
   border-radius: 10px;
   box-shadow: 7px 5px 5px darkgrey;
